--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "@ethersproject/solidity": "^5.7.0",
     "eotc-bscswap-sdk": "^1.0.0"
   }
 }
